--- a/.github/workflows/latex2pdf.yml
+++ b/.github/workflows/latex2pdf.yml
@@ -14,18 +14,12 @@ jobs:
   build_latex:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Git repository
-        uses: actions/checkout@v4
-      - name: latex2pdf
-        id: compile-latex-document
-        uses: thomas-chauvet/latex2pdf-action@1.0.5
+      - name: Compile LateX
+        # You may pin to the exact commit or the version.
+        # uses: vinay0410/tectonic-action@b3138021657a3cdb3823f3980be054ca89e86d81
+        uses: vinay0410/tectonic-action@v1.1.2
         with:
-          output_dir: output
-          main_latex_file: resume.tex
-          ctan_packages: amsmath amsfonts lua-uni-algos
-      - name: Upload PDF to the workflow tab
-        id: upload-workflow-tab
-        uses: actions/upload-artifact@v2
-        with:
-          name: output
-          path: output/test.pdf
+          # Path of Tex File
+          tex_path: resume.tex
+          # String stating whether to push output PDF, PDF will only be pushed in case of "yes"
+          push: yes
