--- a/.github/workflows/latex2pdf.yml
+++ b/.github/workflows/latex2pdf.yml
@@ -14,12 +14,19 @@ jobs:
   build_latex:
     runs-on: ubuntu-latest
     steps:
-      - name: Compile LateX
+      - name: LaTeX compilation
         # You may pin to the exact commit or the version.
-        # uses: vinay0410/tectonic-action@b3138021657a3cdb3823f3980be054ca89e86d81
-        uses: vinay0410/tectonic-action@v1.1.2
+        # uses: dante-ev/latex-action@49cf7cb5f79e7b2006dbdffea85e02bec0b6244b
+        uses: dante-ev/latex-action@2021-A
         with:
-          # Path of Tex File
-          tex_path: resume.tex
-          # String stating whether to push output PDF, PDF will only be pushed in case of "yes"
-          push: yes
+          # The root LaTeX file to be compiled
+          root_file: resume.tex
+          # The working directory for the latex compiler to be invoked
+          working_directory: output
+          # LaTeX engine to be used
+          compiler: latexmk
+          # Extra arguments to be passed to the latex compiler
+          args: # optional, default is -pdf -latexoption=-file-line-error -latexoption=-interaction=nonstopmode
+          # Install extra packages by apt-get
+          extra_system_packages: # optional
+                
