--- a/.github/workflows/latex2pdf.yml
+++ b/.github/workflows/latex2pdf.yml
@@ -1,32 +1,18 @@
-name: LateX to PDF
+---
+name: CI
 
-on:
-  push:
-    branches: 
-      - master
-      - develop
-    tags:
-       - '*'
-  pull_request:
-    branches: [ master ]
+on: [push]
 
 jobs:
-  build_latex:
+  build-test:
     runs-on: ubuntu-latest
     steps:
-      - name: LaTeX compilation
-        # You may pin to the exact commit or the version.
-        # uses: dante-ev/latex-action@49cf7cb5f79e7b2006dbdffea85e02bec0b6244b
-        uses: dante-ev/latex-action@2021-A
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Generate PDF document
+        uses: hspaans/latexmk-action@v2.1.0
         with:
-          # The root LaTeX file to be compiled
-          root_file: resume.tex
-          # The working directory for the latex compiler to be invoked
-          working_directory: 
-          # LaTeX engine to be used
-          compiler: 
-          # Extra arguments to be passed to the latex compiler
-          args: # optional, default is -pdf -latexoption=-file-line-error -latexoption=-interaction=nonstopmode
-          # Install extra packages by apt-get
-          extra_system_packages: # optional
-                
+          format: pdf
+          filename: resume.tex
+          options: -shell-escape
